feat: 🎸 process dropdown component

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,33 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "plugin:vue/vue3-essential", "plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
+  "extends": ["plugin:vue/vue3-essential", "airbnb", "plugin:prettier/recommended"],
   "parser": "vue-eslint-parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "parser": "@typescript-eslint/parser",
     "sourceType": "module"
   },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".ts", ".vue"]
+      }
+    }
+  },
   "plugins": ["vue", "@typescript-eslint"],
-  "rules": {}
+  "rules": {
+    "prettier/prettier": "off",
+    "no-restricted-syntax": "off",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+    ]
+  }
 }
