--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   },
   "dependencies": {
     "nanoid": "^4.0.0",
-    "vue": "^3.2.38"
+    "vue": "^3.2.38",
+    "@iconify/vue": "^3.2.1"
   },
   "devDependencies": {
-    "@iconify/vue": "^3.2.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@vitejs/plugin-vue": "^3.0.3",
     "eslint": "^8.23.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
