--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@iconify/vue": "^4.0.0",
+    "axios": "^0.27.2",
     "vue": "^3.2.39",
     "vue-router": "^4.1.5"
   },
