--- a/package.json
+++ b/package.json
@@ -15,26 +15,27 @@
   "dependencies": {
     "@iconify/vue": "^4.0.0",
     "axios": "^0.27.2",
+    "socket.io-client": "^4.5.2",
     "vue": "^3.2.39",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@vitejs/plugin-vue": "^3.1.0",
-    "eslint": "^8.23.0",
+    "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.1",
-    "eslint-plugin-vue": "^9.4.0",
+    "eslint-plugin-vue": "^9.5.1",
     "git-cz": "^4.9.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "sass": "^1.54.9",
+    "sass": "^1.55.0",
     "typescript": "^4.8.3",
-    "vite": "^3.1.0",
+    "vite": "^3.1.3",
     "vue-tsc": "^0.40.13"
   },
   "config": {
