--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,8 @@
         "tsx": "never"
       }
     ],
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "no-param-reassign": "off",
+    "no-unused-vars": "off"
   }
 }
