--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
     ],
     "import/prefer-default-export": "off",
     "no-param-reassign": "off",
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "no-unused-expressions": "off"
   }
 }
