--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,8 @@
     "import/prefer-default-export": "off",
     "no-param-reassign": "off",
     "no-unused-vars": "off",
-    "no-unused-expressions": "off"
+    "no-unused-expressions": "off",
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": "error"
   }
 }
