--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,18 @@
   },
   "settings": {
     "import/resolver": {
-      "node": {
-        "extensions": [".ts", ".vue"]
+      "alias": {
+        "extensions": [".ts", ".vue", ".json"],
+        "map": [
+          ["@comp", "./src/components/"],
+          ["@style", "./src/styles/"],
+          ["@layout", "./src/layouts/"],
+          ["@util", "./src/utils/"],
+          ["@type", "./src/types/"],
+          ["@api", "./src/apis/"],
+          ["@cos", "./src/composes/"],
+          ["@", "./src"]
+        ]
       }
     }
   },
@@ -37,6 +47,7 @@
     "no-unused-vars": "off",
     "no-unused-expressions": "off",
     "no-shadow": "off",
-    "@typescript-eslint/no-shadow": "error"
+    "@typescript-eslint/no-shadow": "error",
+    "import/order": "off"
   }
 }
