--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,6 +49,7 @@
     "no-unused-expressions": "off",
     "no-shadow": "off",
     "@typescript-eslint/no-shadow": "error",
-    "import/order": "off"
+    "import/order": "off",
+    "no-use-before-define": "off"
   }
 }
