--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^1.3.5",
     "pinia": "^2.0.34",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue-upload-component": "^3.1.8"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
